--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -101,3 +101,14 @@
     font-size: 19px;
     line-height: 31px;
 }
+
+
+html {
+	font-family: 'Goudy Bookletter 1911', Georgia, Times, serif !important;
+
+}
+
+body {
+  min-height: calc(100vh + 200px);
+  padding-bottom: 200px;
+}
