--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,15 @@
 }
 
 html {
+  position: relative;
 	font-family: 'Goudy Bookletter 1911', Georgia, Times, serif !important;
+  padding-bottom: 200px;
+}
+
+body {
+  padding-bottom: 200px;
+   min-height: calc(100vh + 200px);
+  padding-bottom: 200px;
 }
 
 .main-content-shadow {
