--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -5,10 +5,10 @@ import BaseLayout from '@/layouts/BaseLayout'
 ---
 
 <script is:raw src='https://jswhisperer.uk/js/head.min.js'></script>
-<script is:raw>
+<script>
 	head.js(
 		'https://jswhisperer.uk/js/jquery.min.js',
-		{ responsiveslides: 'https://jswhisperer.uk/js/responsiveslides.min.js' },
+		'https://jswhisperer.uk/js/responsiveslides.min.js',
 		'https://jswhisperer.uk/js/jquery.smooth-scroll.min.js'
 	)
 </script>
