--- a/src/components/ListPosts.astro
+++ b/src/components/ListPosts.astro
@@ -1,7 +1,7 @@
 ---
-import type { CollectionEntry } from 'astro:content'
 import PostCard from '@/components/PostCard'
 import { cn } from '@/utils'
+import type { CollectionEntry } from 'astro:content'
 
 type Props = {
 	posts: CollectionEntry<'blog'>[]
@@ -18,11 +18,12 @@ const { posts, FirstBig = false } = Astro.props
 	)}
 >
 	{
-		posts.map(async (post) => {
+		posts.map(async (post, index) => {
 			const { remarkPluginFrontmatter } = await post.render()
 
 			return (
 				<PostCard
+					index={index}
 					id={post.id}
 					data={post.data}
 					slug={post.slug}
