--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -5,7 +5,7 @@ import ArrowUp from '@/components/icons/ArrowUp'
 
 const {
 	id,
-	data: { title, description, pubDate, heroImage, category },
+	data: { title, description, pubDate, heroImage, category, index },
 	readTime,
 	slug
 } = Astro.props
@@ -17,13 +17,11 @@ const {
 			heroImage && (
 				<Picture
 					src={heroImage}
-					width={600}
-					height={200}
 					formats={['avif', 'webp']}
 					class='h-full min-w-full object-cover hover:scale-[101%] transition-all duration-200 rounded-[2px]'
 					alt={`img of ${title}`}
 					decoding='async'
-					loading='lazy'
+					loading={index < 3 ? 'eager' : 'lazy'}
 				/>
 			)
 		}
