--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -5,9 +5,10 @@ import ArrowUp from '@/components/icons/ArrowUp'
 
 const {
 	id,
-	data: { title, description, pubDate, heroImage, category, index },
+	data: { title, description, pubDate, heroImage, category },
 	readTime,
-	slug
+	slug,
+	index
 } = Astro.props
 ---
 
