--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -25,7 +25,7 @@ const posts = await getCollection('blog', { limit: MAX_POSTS })
 	<ListCategories />
 
 	<div class='h-feed'>
-		<h2 class='text-lg font-medium tracking-wide text-end'>Latest Posts</h2>
+		<h2 class=''>Latest Posts</h2>
 		<ListPosts FirstBig={true} posts={posts} />
 	</div>
 </BaseLayout>
