--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -58,7 +58,7 @@ const {
 		<footer class='flex justify-between items-center'>
 			<a
 				href={`/post/${slug}/`}
-				class='flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
+				class='p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
 				aria-label={`go to ${title}`}
 			>
 				Read Post <span
