--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -12,7 +12,7 @@ const {
 } = Astro.props
 ---
 
-<article class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group'>
+<article class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'>
 	<a class='relative overflow-hidden' href={`/post/${slug}/`}>
 		{
 			heroImage && (
