--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,11 +4,10 @@ import { siteConfig } from '@/site-config'
 const today = new Date()
 ---
 
-<footer class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
+<!-- <footer class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
 	&copy; {today.getFullYear()}
 	{siteConfig.author}. All rights reserved.
-</footer>
-
+</footer> -->
 <footer id='footer' class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
 	<span class='shadow-down'></span>
 	<div class='container'>
@@ -353,4 +352,7 @@ const today = new Date()
 		}
 	}
 	/*! CSS Used fontfaces */
+	footer {
+		z-index: 999;
+	}
 </style>
