--- a/src/components/mdx/Code.astro
+++ b/src/components/mdx/Code.astro
@@ -10,11 +10,11 @@ import CheckIcon from '../icons/CheckIcon.astro'
 	const coppyBlock = () => {
 		const codeBlock = document.querySelectorAll('pre')
 
-		codeBlock.forEach((code) => {
+		codeBlock?.forEach((code) => {
 			const button = code.querySelector('.copy-button')
 			const check = code.querySelector('.check-span')
 
-			button!.addEventListener('click', () => {
+			button?.addEventListener('click', () => {
 				navigator.clipboard.writeText(code.textContent?.trim() || '')
 				check?.classList.remove('opacity-0')
 				button?.classList.add('opacity-0')
