--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -1,3 +1,7 @@
+---
+import { fade, slide } from 'astro:transitions'
+---
+
 <div id='header'>
 	<span class='shadow-down'></span>
 	<div id='content'>
