--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -2,6 +2,7 @@
 import { Image, Picture } from 'astro:assets'
 import FormattedDate from '@/components/FormattedDate'
 import ArrowUp from '@/components/icons/ArrowUp'
+import { fade, slide } from 'astro:transitions'
 
 const {
 	id,
@@ -12,8 +13,15 @@ const {
 } = Astro.props
 ---
 
-<article class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'>
-	<a class='relative overflow-hidden' href={`/post/${slug}/`}>
+<article
+	transition:animate={slide({ duration: '0.5s' })}
+	class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'
+>
+	<a
+		transition:animate={slide({ duration: '0.5s' })}
+		class='relative overflow-hidden'
+		href={`/post/${slug}/`}
+	>
 		{
 			heroImage && (
 				<Picture
