--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -5,7 +5,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 ---
 
 <script is:raw src='https://jswhisperer.uk/js/head.min.js'></script>
-<script>
+<script is:raw>
 	head.js(
 		'https://jswhisperer.uk/js/jquery.min.js',
 		'https://jswhisperer.uk/js/responsiveslides.min.js',
@@ -230,7 +230,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 		</li>
 	</ul>
 
-	<script>
+	<script is:raw>
 		document.addEventListener('DOMContentLoaded', function () {
 			$('.rslides').responsiveSlides({
 				auto: true,
