--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -65,7 +65,7 @@ import { join } from 'path'
 <meta name='title' content={siteTitle} />
 <meta name='description' content={description} />
 <meta name='author' content={siteConfig.author} />
-<script is:inline src='/registerSW.js'></script>
+<script is:inline src='/sw.js'></script>
 
 <!-- Open Graph / Facebook -->
 <meta property='og:type' content={articleDate ? 'article' : 'website'} />
