--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -25,6 +25,7 @@ const {
 		{
 			heroImage && (
 				<Picture
+					layout='responsive'
 					src={heroImage}
 					formats={['avif', 'webp']}
 					class='h-full min-w-full object-cover hover:scale-[101%] transition-all duration-200 rounded-[2px]'
