--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,6 +19,7 @@ const posts = await getCollection('blog', { limit: MAX_POSTS })
 			class='u-photo'
 			src={import('../assets/images/greg.jpeg')}
 			alt='Gregory Benner'
+			layout='responsive'
 		/>
 		<a class='p-org h-card' href='https://jswhisperer.uk/'>jswhisperer</a>
 	</div>
