--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -55,6 +55,23 @@ const structuredData = {
 				font-size: 19px;
 				line-height: 31px;
 			}
+			[data-astro-image] {
+				width: 100%;
+				height: auto;
+				object-fit: var(--fit);
+				object-position: var(--pos);
+				aspect-ratio: var(--w) / var(--h);
+			}
+
+			[data-astro-image='responsive'] {
+				max-width: calc(var(--w) * 1px);
+				max-height: calc(var(--h) * 1px);
+			}
+
+			[data-astro-image='fixed'] {
+				width: calc(var(--w) * 1px);
+				height: calc(var(--h) * 1px);
+			}
 		</style>
 	</body>
 </html>
