--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -221,13 +221,26 @@ import angela from '../assets/images/portfolio/angela-jeweller.jpg'
 		</li>
 	</ul>
 
-	<scrip is:raw>
-		document.addEventListener('load', function () { $('.rslides').responsiveSlides({ auto: true,
-		speed: 1000, timeout: 4000, pager: false, nav: true, random: false, pause: true, pauseControls:
-		false, prevText: '&#x005f;', nextText: '&#x0022;', maxwidth: '', controls: '', namespace:
-		'rslides' }) $('a').smoothScroll({ excludeWithin: ['[data-tabs]'] }) // $('img').each(function
-		() { // $(this) // .delay(800) // .animate({ opacity: 1 }, 1000) // }) })
-	</scrip>
+	<script>
+		document.addEventListener('load', function () {
+			$('.rslides').responsiveSlides({
+				auto: true,
+				speed: 1000,
+				timeout: 4000,
+				pager: false,
+				nav: true,
+				random: false,
+				pause: true,
+				pauseControls: false,
+				prevText: '&#x005f;',
+				nextText: '&#x0022;',
+				maxwidth: '',
+				controls: '',
+				namespace: 'rslides'
+			})
+			$('a').smoothScroll({ excludeWithin: ['[data-tabs]'] })
+		})
+	</script>
 </BaseLayout>
 
 <style media='none' onload="if(media!='all')media='all'" loading='lazy'>
