--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -73,7 +73,7 @@ import { join } from 'path'
 <meta name='title' content={siteTitle} />
 <meta name='description' content={description} />
 <meta name='author' content={siteConfig.author} />
-<script type='javascript/application' type='module' src='src/sw.js'></script>
+<script type='module' src='/sw.js'></script>
 
 <!-- Open Graph / Facebook -->
 <meta property='og:type' content={articleDate ? 'article' : 'website'} />
