--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -55,9 +55,10 @@ import { join } from 'path'
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
 <script preload src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'></script>
 
+<script preload src='https://jswhisperer.uk/js/jquery.min.js'></script>
+
 <script preload>
 	window.head?.js(
-		'https://jswhisperer.uk/js/jquery.min.js',
 		'https://jswhisperer.uk/js/responsiveslides.min.js',
 		'https://jswhisperer.uk/js/jquery.smooth-scroll.min.js'
 	)
