--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,9 @@ import { Picture } from 'astro:assets'
 <BaseLayout title='Contact'>
 	<div class='card'>
 		<div class='insidecolumn'>
-			<a href='#top' class='tothetop'><span aria-hidden='true' class='icon-arrow-up'></span></a>
+			<div id='top' class='top tothetop small-mobile-hide'>
+				<span aria-hidden='true' class='icon-arrow-up'></span>
+			</div>
 			<h2>
 				Contact
 				<span aria-hidden='true' class='icon-really-old-telephone'></span>
