--- a/src/pages/copyright.astro
+++ b/src/pages/copyright.astro
@@ -5,7 +5,9 @@ import BaseLayout from '@/layouts/BaseLayout'
 
 <BaseLayout title='Copyright'>
 	<div class='insidecolumn'>
-		<a href='#top' class='tothetop'><span aria-hidden='true' class='icon-arrow-up'></span></a>
+		<div class='top tothetop small-mobile-hide'>
+			<span aria-hidden='true' class='icon-arrow-up'></span>
+		</div>
 		<h2>Copyrights <span aria-hidden='true' class='icon-tophat'></span></h2>
 		<p>
 			All rights are reserved on everything on this website. No material may be mirrored or copied
