--- a/src/pages/philosophy.astro
+++ b/src/pages/philosophy.astro
@@ -4,7 +4,9 @@ import BaseLayout from '@/layouts/BaseLayout'
 
 <BaseLayout title='Philosophy'>
 	<div class='insidecolumn'>
-		<a href='#top' class='tothetop'><span aria-hidden='true' class='icon-arrow-up'></span></a>
+		<div class='top tothetop small-mobile-hide'>
+			<span aria-hidden='true' class='icon-arrow-up'></span>
+		</div>
 		<h2>
 			Philosophy
 			<span aria-hidden='true' class='icon-old-chair'></span>
