--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,9 +5,9 @@ import BaseLayout from '@/layouts/BaseLayout'
 <BaseLayout title='About'>
 	<div class='card'>
 		<div class='insidecolumn first'>
-			<a href='#top' class='tothetop small-mobile-hide'
-				><span aria-hidden='true' class='icon-arrow-up'></span></a
-			>
+			<div class='top tothetop small-mobile-hide'>
+				<span aria-hidden='true' class='icon-arrow-up'></span>
+			</div>
 			<h2>
 				About Greg Benner
 				<span aria-hidden='true' class='icon-tux'></span>
