--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,9 +6,9 @@ import { Picture } from 'astro:assets'
 <BaseLayout title='Contact'>
 	<div class='card'>
 		<div class='insidecolumn'>
-			<div id='top' class='top tothetop small-mobile-hide'>
+			<a href='#top' aria-label='scroll to the top' class='top tothetop small-mobile-hide'>
 				<span aria-hidden='true' class='icon-arrow-up'></span>
-			</div>
+			</a>
 			<h2>
 				Contact
 				<span aria-hidden='true' class='icon-really-old-telephone'></span>
