--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -17,6 +17,14 @@ const response = await fetch(webmentionsUrl)
 const json = await response.json()
 const webmentions = json.children.filter(({ url }) => url.includes(pageUrl))
 
+// console.table({webmentions})
+
+if (webmentions) {
+	webmentions.map((webmention) => {
+		console.log(webmention)
+	})
+}
+
 const username = 'jswhisperer'
 
 type Props = {
