--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -8,12 +8,14 @@
 		<div class='container'>
 			<div id='logo'>
 				<h1 class='title'>
-					<!-- G<span class="small-mobile-hide">REG</span> -->
-					JavaScript
-					<span aria-hidden='true' class='icon-anchor-one small-mobile-hide' id='logoanchor'
-					></span><span class='small-mobile-only gregasaurus'>6</span>
-					Whisperer
-					<!-- B<span class="small-mobile-hide">ENNER</span> -->
+					<a href='/'>
+						<!-- G<span class="small-mobile-hide">REG</span> -->
+						JavaScript
+						<span aria-hidden='true' class='icon-anchor-one small-mobile-hide' id='logoanchor'
+						></span><span class='small-mobile-only gregasaurus'>6</span>
+						Whisperer
+						<!-- B<span class="small-mobile-hide">ENNER</span> -->
+					</a>
 				</h1>
 			</div>
 			<div class='container navholder'>
