--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -114,6 +114,9 @@ const structuredData = {
 			.icon-arrow-up:before {
 				content: '\0043';
 			}
+			.hide {
+				display: none;
+			}
 		</style>
 	</body>
 </html>
