--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -6,6 +6,7 @@ import angela from '../assets/images/portfolio/angela-jeweller.jpg'
 
 <BaseLayout title='Work'>
 	<a aria-label='scroll to the top' href='#top' class='top tothetop small-mobile-hide'>
+		<span class='hide'>scroll to the top</span>
 		<span aria-hidden='true' class='icon-arrow-up'></span></a
 	>
 	<h2>Work <span aria-hidden='true' class='icon-cannon'></span></h2>
