--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -56,13 +56,12 @@ import { join } from 'path'
 <script async preload src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'
 ></script>
 
-<script async preload src='https://jswhisperer.uk/js/jquery.min.js'></script>
+<script preload src='https://jswhisperer.uk/js/jquery.min.js'></script>
+
+<script async preload src='https://jswhisperer.uk/js/responsiveslides.min.js'></script>
 
 <script preload>
-	window.head?.js(
-		'https://jswhisperer.uk/js/responsiveslides.min.js',
-		'https://jswhisperer.uk/js/jquery.smooth-scroll.min.js'
-	)
+	window.head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
 </script>
 
 <!-- Primary Meta Tags -->
