--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -228,7 +228,7 @@ import angela from '../assets/images/portfolio/angela-jeweller.jpg'
 	</ul>
 </BaseLayout>
 
-<script>
+<script is:inline>
 	setTimeout(() => {
 		$('.rslides').responsiveSlides({
 			auto: true,
@@ -245,7 +245,7 @@ import angela from '../assets/images/portfolio/angela-jeweller.jpg'
 			controls: '',
 			namespace: 'rslides'
 		})
-	}, 1000)
+	}, 5000)
 </script>
 
 <style media='none' onload="if(media!='all')media='all'" loading='lazy'>
