--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -28,6 +28,7 @@ const username = 'jswhisperer'
 
 import { AstroFont } from 'astro-font'
 import { join } from 'path'
+const atomFeed = '/atom.xml'
 ---
 
 <!-- Global Metadata -->
@@ -124,6 +125,8 @@ import { join } from 'path'
 
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
+<!-- <link rel='alternate' type='application/rss+xml' href={new URL(atomFeed, Astro.url)} /> -->
+<link rel='alternate' type='application/atom+xml' href={new URL(atomFeed, Astro.url)} />
 
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
 
