--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -54,14 +54,13 @@ const atomFeed = '/atom.xml'
 <link rel='canonical' href={canonicalURL.toString()} />
 
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
-<script async preload src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'
-></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'></script>
 
-<script preload src='https://jswhisperer.uk/js/jquery.min.js'></script>
+<script src='https://jswhisperer.uk/js/jquery.min.js'></script>
 
-<script async preload src='https://jswhisperer.uk/js/responsiveslides.min.js'></script>
+<script src='https://jswhisperer.uk/js/responsiveslides.min.js'></script>
 
-<script preload>
+<script>
 	window.head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
 </script>
 
@@ -111,7 +110,7 @@ const atomFeed = '/atom.xml'
 	articleDate && (
 		<>
 			<meta property='article:author' content={siteConfig.author} />
-			<meta property='article:published_time' content={articleDate} />
+			<meta property='article:published_time' content={articleDate.toString()} />
 		</>
 	)
 }
