--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -124,8 +124,8 @@ const atomFeed = '/atom.xml'
 
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
-<!-- <link rel='alternate' type='application/rss+xml' href={new URL(atomFeed, Astro.url)} /> -->
-<link rel='alternate' type='application/atom+xml' href={new URL(atomFeed, Astro.url)} />
+
+<link rel='alternate' type='application/atom+xml' href='/atom.xml' />
 
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
 
