--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -123,7 +123,7 @@ const atomFeed = '/atom.xml'
 <meta property='twitter:image' content={socialImageURL} />
 
 <!-- RSS auto-discovery -->
-<link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
+<link rel='alternate' type='application/atom+xml' title={siteConfig.title} href='/rss.xml' />
 
 <link rel='alternate' type='application/atom+xml' href='/atom.xml' />
 
