--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -37,7 +37,9 @@ const atomFeed = '/atom.xml'
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
+<link rel='pingback' href='https://webmention.io/jswhisperer.uk/xmlrpc' />
 <link rel='webmention' href='https://webmention.io/jswhisperer.uk/webmention' />
+
 {
 	[
 		`https://github.com/${username}`,
