--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -92,8 +92,11 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 		<!-- post -->
 		<article class='card max-w-full w-full'>
 			<span class='main-content-shadow'></span>
-			<div class='e-content prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
-				<a class='u-url' href='…'>…</a>
+			<div
+				class='e-content prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'
+				itemprop='articleBody'
+			>
+				<a class='u-url' href=`https://jswhisperer.uk/${post.slug}`>…</a>
 
 				<Content components={{ Code, SButton, Picture }} />
 
