--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -93,7 +93,10 @@ const articleDate = pubDate.toISOString()
 
 			<div class='flex flex-col gap-2'>
 				<div class='flex items-center justify-center gap-x-1'>
-					<h1 class='p-name text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'>
+					<h1
+						itemprop='headline'
+						class='p-name text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'
+					>
 						{title}
 					</h1>
 
